<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu.AccountCreditMenuActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="198dp"
        android:layout_height="61dp"
        android:text="@string/Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <Button
        android:id="@+id/send"
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <Button
        android:id="@+id/withDraw"
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/withdraw"
        app:layout_constraintEnd_toEndOf="@+id/send"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/send"
        app:layout_constraintTop_toBottomOf="@+id/send" />

    <Button
        android:id="@+id/change"
        android:layout_width="243dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="@+id/withDraw"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/withDraw"
        app:layout_constraintTop_toBottomOf="@+id/withDraw" />

    <Button
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/logOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change"
        app:layout_constraintVertical_bias="0.052" />


</androidx.constraintlayout.widget.ConstraintLayout>
